app/assets/stylesheets/users.css.scss
// Place all the styles related to the users controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

@mixin form {
  margin: 0 auto;
  margin-top: 50px;
  padding: 10px;
  padding-bottom: 20px;
  text-align: left;
  background-color: white;
  width: 450px;
  font-family: 'open sans', 'sans serif';
  hr {
    width: 300px;
  }
  .headers {
    margin-top: 20px;
  }
  .input {    width: 300px;
    margin: 0 auto;
    padding-top: 5px;
    padding-bottom: 15px;
  }
  input {
    width: 300px;
  }
  .submit-btn {
    border: 1px solid #e2e2e2;
    background-color: #eeeeee;
    text-align: center;
    width: 100%;
    margin: 0 auto;
  }
  .msg {
    text-align: center;
  }
}

//view/signup
.signup-view, 
//view/login
.login-view, 
// view/users/edit
.edit-view {
  @include form;
}

.delete {
  margin-top: 10px;
  text-align: center;
}

// view/users/show
#about-user {
  margin: 0 auto;
  text-align: center;
  width: 60%;
  position: relative;
}

.users-view {
  width: 130px;
}

.user-avatar {
  text-align: center;
  img {
    border-radius: 100%;
  }
}

.user-avatar-show {
  width: 130px;
  img {
    border-radius: 100%;
    margin: 0;
  }
}

.user-name-company {
  width: 130px;
  text-align: center;
}

